--- a/app/styles/update/update.module.css
+++ b/app/styles/update/update.module.css
@@ -23,7 +23,7 @@
   }
   
   .popupContent {
-    background-color: white;
+    background-color: #C6E7E7;
     padding: 20px;
     border-radius: 8px;
     max-width: 500px;
