--- a/app/styles/borrow/borrow.module.css
+++ b/app/styles/borrow/borrow.module.css
@@ -3,9 +3,7 @@
     padding: 10px;
     border-radius: 10px;
     margin-top: 20px;
-
 }
-
  
 .top{
     display:flex; 
@@ -21,6 +19,28 @@
     padding: 8px;
     width: 250px;
 }
+
+.input {
+    background-color: transparent;
+    border: none;
+    color: var(--text);
+    outline: none;
+    padding: 5px;
+    width: 180px; 
+    padding-left: 0;
+  }
+  
+  .search {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    background-color: #c6e7e7; 
+    padding: 1px 10px;
+    border-radius: 25px;
+    justify-content: start;
+    width: 220px;
+    margin-left: 200px;
+  }
 
 @media (max-width: 600px) {
     .container {
@@ -67,8 +87,16 @@
     color: #ffffff;
     border-radius: 10px;
     margin-top:10px;
-    height: 10px;
-}
+    /* height: 400px; */
+ }
+
+ .tablediv{
+    background-color: #1B9392;
+    height: 300px;
+    width: 100%;
+    border-radius: 10px;
+      
+ }
 
 .table thead,
 .table td{
