--- a/app/styles/components/components.module.css
+++ b/app/styles/components/components.module.css
@@ -1,5 +1,8 @@
 .container {
-  margin: 20px 0;
+  /* margin: 20px 0; */
+
+margin-top: 0;
+
   /* background-color: #1B9392; */
   padding: 20px;
   /* border-radius: 10px; */
@@ -11,6 +14,34 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  margin-top: 1px;
+}
+
+.input {
+  background-color: transparent;
+  border: none;
+  color: var(--text);
+  outline: none;
+  padding: 5px;
+  width: 160px; 
+  padding-left: 0;
+}
+
+.Search {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  background-color: #c6e7e7;
+  padding: 1px 10px;
+  border-radius: 25px;
+  justify-content: start;
+  width: 200px;
+  margin-left: 260px;
+}
+
+.btn{
+  display:flex;
+  gap :20px;
 }
 
 .addButton {
@@ -21,7 +52,9 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  width: clamp(120px, 20vw, 200px);
+  /* width: clamp(120px, 20vw, 200px); */
+  width: clamp(50px, 12vw, 180px);
+
 }
 
 .addButton:hover {
