--- a/app/styles/navbar/navbar.module.css
+++ b/app/styles/navbar/navbar.module.css
@@ -14,6 +14,12 @@
   font-size: 18px;
 }
 
+/* Added component  */
+ .component{
+     font-size: 25px;
+     font-weight: 650;
+}
+
 .menu {
   display: flex;
   align-items: center;
