--- a/app/styles/students/singleStudent/singleStudent.module.css
+++ b/app/styles/students/singleStudent/singleStudent.module.css
@@ -153,16 +153,19 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  backdrop-filter: blur(10px); /* This applies the blur effect */
+  -webkit-backdrop-filter: blur(5px); /* Safari support */
 }
 
 .popupContent {
-  background-color: white;
+  background-color: #c6e7e7;
   padding: 30px;
   border-radius: 10px;
   max-width: 600px;
   width: 90%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   animation: popupFadeIn 0.3s ease-out;
+  position: relative;
 }
 
 @keyframes popupFadeIn {
@@ -173,7 +176,7 @@
 .popupContent h2 {
   margin-top: 0;
   margin-bottom: 20px;
-  color: #333;
+  color: #ff7211;
   font-size: 24px;
   text-align: center;
 }
@@ -200,8 +203,9 @@
 
 .popupButtons {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 20px;
+  gap: 20px;
 }
 
 .popupButtons button {
@@ -286,9 +290,10 @@
 
 .entryRow {
   display: flex;
-  gap: 10px;
+  gap: 30px;
   /* margin-bottom: 10px; */
   align-items: center;
+  margin-left: 40px;
 }
 
 .entryRow input {
@@ -300,7 +305,8 @@
   background-color: #ff4d4d;
   color: white;
   border: none;
-  padding: 4px 8px;
+  margin-bottom: 13px;
+  padding: 6px 8px;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -314,13 +320,27 @@
   background-color: teal;
   color: white;
   border: none;
+  width:200px;
   padding: 10px 15px;
   border-radius: 4px;
   cursor: pointer;
   margin-bottom: 20px;
+  margin-left: 150px;
   transition: background-color 0.3s ease;
 }
 
 .addEntryBtn:hover {
   background-color: teal;
 }
+
+ .closeButtons {
+   position:absolute;
+   top: 20px;
+   right: 20px;
+   background: none;
+   border: none;
+   font-size: 24px;
+   cursor: pointer;
+   color: #000000;
+
+ }
