--- a/app/styles/cohorts/viewCohort/viewCohort.module.css
+++ b/app/styles/cohorts/viewCohort/viewCohort.module.css
@@ -19,8 +19,8 @@
 }
 
 .card {
-  background: #1b9392;
-  border: 1px solid #1b9392;
+  background: #c6e7e7;
+  border: 1px solid #c6e7e7;
   border-radius: 8px;
   padding: 20px;
   width: 300px;
