--- a/app/styles/cohorts/viewCohort/viewLevel.module.css
+++ b/app/styles/cohorts/viewCohort/viewLevel.module.css
@@ -18,30 +18,37 @@
   display: flex;
   justify-content: space-between;
 }
-
+.tableTop h3{
+  font-size: 24px;
+  color:black;
+  font-weight: bold;
+}
 .table {
   width: 100%;
   border-collapse: collapse;
-  background-color: var(--bgSoft);
+  background: white;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+.table thead {
+  background: #1b9392;
+  color: white;
 }
 
 .table th,
 .table td {
-  padding: 12px 15px;
+  padding: 12px;
   text-align: left;
-  border-bottom: 1px solid var(--border);
-  font-size: 14px;
-  text-transform: capitalize;
+  border-bottom: 1px solid #ddd;
 }
 
-.table th {
-  background-color: var(--bgAccent);
-  font-weight: bold;
+.table tbody tr:nth-child(even) {
+  background: #d8d8d8;
 }
 
-.table tr:nth-child(even) {
-  background-color: var(--bgAccent2);
-}
 
 .table tr:hover {
   background-color: var(--bgAccent3);
@@ -90,6 +97,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  backdrop-filter: blur(10px); /* This applies the blur effect */
+  -webkit-backdrop-filter: blur(5px); /* Safari support */
 }
 
 .popupContent {
@@ -330,7 +339,7 @@
   right: 10px;
   background: none;
   border: none;
-  font-size: 20px;
+  font-size: 24px;
   cursor: pointer;
   color:red;
 }
@@ -341,23 +350,23 @@
   right: 20px;
   background: none;
   border: none;
-  font-size: 90px;
+  font-size: 24px;
   cursor: pointer;
-  color:red;
+  color: #ff7211;
 
 }
 /* Card Styling */
-.card {
-  background: #008080; /* Teal background */
-  color: white;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  max-width: 100%;
-  min-width: 250px;
-  text-align: left;
-  position: relative;
-}
+/*.card {*/
+/*  !*background: #008080; !* Teal background *!*!*/
+/*  !*color: white;*!*/
+/*  padding: 20px;*/
+/*  border-radius: 10px;*/
+/*  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);*/
+/*  max-width: 100%;*/
+/*  min-width: 250px;*/
+/*  text-align: left;*/
+/*  position: relative;*/
+/*}*/
 
 /* Title */
 
@@ -381,7 +390,7 @@
 .dropdownMenu {
   position: absolute;
   right: 10px;
-  top: 30px;
+  top: 160px;
   background: #c6e7e7;
   border-radius: 5px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
