--- a/app/styles/students/addStudent/facilitators.module.css
+++ b/app/styles/students/addStudent/facilitators.module.css
@@ -1,78 +1,21 @@
-.container {
+
+
+
+.container{
     /*display: flex;*/
     /*flex-direction: column;*/
     padding: 20px;
     /*background: #1b9392;*/
     border-radius: 8px;
 }
-
 .top {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
     gap: 15px;
-    /*background: white;*/
-    /*!*padding: 20px;*!*/
-    border-radius: 10px;
-    /*box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);*/
+    width: 100%;
 }
 
-.filterSection {
-    display: flex;
-    flex-wrap: wrap;
-
-    align-items: center;
-    justify-content: space-between;
-}
-
-.filterField {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-
-.filterField label {
-    font-size: 14px;
-    font-weight: 600;
-    margin-bottom: 5px;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.filterField select,
-.filterField input {
-    padding: 8px;
-    border: 1px solid #d1d5db;
-    border-radius: 5px;
-    outline: none;
-}
-
-.filterButton {
-    background: #ff7211;
-    color: white;
-    border: none;
-    padding: 6px 12px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s ease-in-out;
-}
-
-.filterButton:hover {
-    background: #c6e7e7;
-}
-
-.downloadButton {
-    background: #c6e7e7;
-    color: white;
-    border: none;
-    padding: 6px 12px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s ease-in-out;
-}
-
-.downloadButton:hover {
-    background: #1b9392;
-}
 
 .addButton {
     background: #ff7211;
@@ -82,7 +25,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background 0.3s ease-in-out;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .addButton:hover {
@@ -95,7 +38,7 @@
     background: white;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
     margin-top: 20px;
 }
 
