--- a/app/styles/components/borrowHistory/borrowHistory.module.css
+++ b/app/styles/components/borrowHistory/borrowHistory.module.css
@@ -1,19 +1,25 @@
-.container {
-  margin: 20px 0;
-  background-color: #1B9392;
-  padding: 20px;
+ .container {
+  /* margin: 20px 0; */
+  /* background-color: #1B9392; */
+  margin-top: 1px;
+  padding-left: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+  height: auto;
 }
 
 .title {
   margin-bottom: 20px;
-  color: #ffffff;
+  color: #1B9392;
+  padding: 2px;
+  font-weight: 800;
+  font-size: 22px;
+  text-align: center;
 }
 
 .componentDetails {
   background: linear-gradient(145deg, var(--bgSoft), var(--bgAccent));
-  border-radius: 15px;
+  /* border-radius: 10px; */
   padding: 20px;
   margin-bottom: 30px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
@@ -29,7 +35,7 @@
 
 .componentDetails h2 {
   color: #1B9392;
-   font-size: 24px;
+  font-size: 24px;
   margin-bottom: 15px;
   border-bottom: 2px solid var(--primary);
   padding-bottom: 10px;
@@ -44,6 +50,10 @@
   align-items: center;
 }
 
+.componentDetails p span{
+      color: #ffffff;
+}
+
 .componentDetails p:before {
   content: '•';
   color: var(--primary);
@@ -54,8 +64,10 @@
 .table {
   width: 100%;
   border-collapse: collapse;
-  background-color: var(--bgSoft);
+  /* background-color: #1B9392; */
   color: #FFFFFF;
+  /* border-radius: 10px; */
+  height:50px;
 }
 
 .table th,
@@ -66,14 +78,20 @@
   font-size: 14px;
 }
 
+.table thead{
+  background-color: #1B9392;
+ }
+
 .table th {
   background-color: var(--bgAccent);
   font-weight: bold;
   color: var(--textAccent);
 }
 
-.table tr:nth-child(even) {
-  background-color: var(--bgAccent2);
+.table tbody tr:nth-child(odd) {
+  background-color: #f0f0f0;
+  color: #1B9392;
+  font-weight: 500;
 }
 
 .table tr:hover {
@@ -108,4 +126,5 @@
 .componentDetails p span {
   font-weight: bold;
   color: var(--textAccent);
-}
+} 
+  
