--- a/app/styles/cohorts/addCohort/addCohort.module.css
+++ b/app/styles/cohorts/addCohort/addCohort.module.css
@@ -9,7 +9,7 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   position: relative;
   margin-left: 250px;
-
+  height: 100vh;
   /* Semi-transparent background */
 
 }
