--- a/app/styles/components/add/addComponent.module.css
+++ b/app/styles/components/add/addComponent.module.css
@@ -176,14 +176,20 @@
   /* margin-right: 85px; */
 }
 
+.component{
+
+  background-color: #006d5b;
+}
+
 .componentInfo{
 
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   gap: 10px;
   padding-left: 50px;
-  margin-top: 12px;
+  margin-top: 12px; */
 } 
+
 
 .componentInfo p {
   display: flex;
