--- a/app/styles/navbar/navbar.module.css
+++ b/app/styles/navbar/navbar.module.css
@@ -1,6 +1,6 @@
 .container {
-  padding: 10px 20px;
-  border-radius: 10px;
+  /* padding: 10px 20px; */
+   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: start;
