--- a/app/styles/sidebar/sidebar.module.css
+++ b/app/styles/sidebar/sidebar.module.css
@@ -5,7 +5,7 @@
   width: 250px;
   height: 100vh;
   padding: 20px;
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
 /*title{*/
@@ -173,5 +173,5 @@
 
 }
 .down{
-  margin-top: 150px;
+  margin-top: 120px;
 }
