--- a/app/styles/borrow/singlepage/singlepage.module.css
+++ b/app/styles/borrow/singlepage/singlepage.module.css
@@ -11,8 +11,8 @@
   
   .formContainer {
     display: flex;
-    flex-direction: row;
-    gap: 40px;
+    flex-direction: column;
+    gap: 30px;
     /* background-color: #C6E7E7; */
   }
   
@@ -28,8 +28,8 @@
   
   .formSection h2 {
     font-size: 24px;
-    padding: 10px 0 20px;
-    text-align: center;
+    /* padding: 10px 0 20px; */
+    /* text-align: center; */
     color: var(--text);
     border-bottom: 2px solid var(--bgSoft);
     margin-bottom: 20px;
@@ -48,7 +48,7 @@
   
   .fieldGroup input,
   .fieldGroup select {
-    width: 100%;
+    /* width: 100%; */
     padding: 10px;
     border: 1px solid var(--bgSoft);
     border-radius: 6px;
@@ -80,12 +80,13 @@
   .actionButtons {
     display: flex;
     gap: 5px;
+    margin-left: 60px;
   }
   
   .actionButtons button {
     padding: 5px 10px;
     border: none;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     cursor: pointer;
     background-color: #1B9392;
     color: #fff;
