--- a/app/styles/footer/footer.module.css
+++ b/app/styles/footer/footer.module.css
@@ -3,8 +3,8 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 30px;
-  color: white;
-   background: linear-gradient(to left, #c2f3f3, #4fa9a9); 
+  color: #4fa9a9;
+   /* background: linear-gradient(to left, #c2f3f3, #4fa9a9);  */
 }
 
 .logo {
