--- a/app/styles/components/borrowHistory/borrowHistory.module.css
+++ b/app/styles/components/borrowHistory/borrowHistory.module.css
@@ -12,15 +12,15 @@
   margin-bottom: 20px;
   color: #1B9392;
   padding: 2px;
-  font-weight: 800;
-  font-size: 22px;
-  text-align: center;
-}
+  font-weight: 600;
+  font-size: 21px;
+ }
 
 .componentDetails {
   background: linear-gradient(145deg, var(--bgSoft), var(--bgAccent));
   /* border-radius: 10px; */
-  padding: 20px;
+  /* padding: 20px; */
+  padding-left: 12px;
   margin-bottom: 30px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -35,10 +35,10 @@
 
 .componentDetails h2 {
   color: #1B9392;
-  font-size: 24px;
-  margin-bottom: 15px;
-  border-bottom: 2px solid var(--primary);
-  padding-bottom: 10px;
+  font-size: 22px;
+  padding-top: 10px;
+   border-bottom: 2px solid var(--primary);
+  padding-bottom: 5px;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
